--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,8 @@ header{
     border: 3px solid black;
     width: 100%;
     max-width: 700px;
+    height: 100%;
+    max-height: 150px;
     padding: 50px;
     margin: 20px auto;
     box-shadow: -7px 10px 3px rgba(0,0,0,0.5);
